--- a/qml.qrc
+++ b/qml.qrc
@@ -1,6 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>left_corner.png</file>
+        <file>straight.png</file>
+        <file>right_corner.png</file>
     </qresource>
 </RCC>
-
